fix: fix old-content css in dark mode

--- a/assets/css/extended/post-old-content.css
+++ b/assets/css/extended/post-old-content.css
@@ -5,6 +5,11 @@
     margin-top: 2rem;
 }
 
+.dark .post-old-content {
+    background-color: #2a2a2a;
+    color: #f8f8f8;
+}
+
 .post-old-content-title {
     font-size: 1rem;
     font-weight: bold;
